[package]
name = "bpx-api-examples"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
description = "Backpack Exchange API examples"
repository = "https://github.com/backpack-exchange/bpx-api-client"

[dependencies]
bpx-api-client = { path = "../client", features = ["ws"] }
bpx-api-types = { path = "../types" }

anyhow = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4.34", features = ["serde"] }
rust_decimal = { version = "1.34.0", features = ["serde"] }
rust_decimal_macros = "1.34.0"
serde_json = "1.0.114"
async-trait = "0.1"
hyperliquid_rust_sdk = { version = "0.6.0", optional = true }
alloy = { version = "1.0", default-features = false, features = ["signer-local"], optional = true }

[[bin]]
name = "orders"
path = "src/bin/orders.rs"

[[bin]]
name = "rfq"
path = "src/bin/rfq.rs"

[[bin]]
name = "ma_cross"
path = "src/bin/ma_cross.rs"
